Fix address bar covering navItem in mobile

--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -143,8 +143,8 @@
     height: 82vh;
     width: 60%;
     margin-right: 0px;
-    padding: 20px 15px 30px 20px;
-    background-color: rgba(0, 0, 0, 0.9);
+    padding: 10px 15px 70px 20px;
+    background-color: rgba(33, 33, 33, 0.9);
     position: fixed;
     display: flex;
     flex-direction: column;
@@ -174,7 +174,7 @@
     height: 87vh;
     width: 60%;
     margin-right: 0px;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(33, 33, 33, 0.9);
     position: fixed;
     display: flex;
     flex-direction: column;
